# Vibe_Identify

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  genre_gui.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
.github/workflows/: ci.yml
desktop/: Launch Vibedentify.vbs  README.md  genre_app.pyw  launch.bat  requirements-desktop.txt
docs/: USAGE.md
static/: app.css  app.js  genre_families.json
templates/: index.html
tests/: conftest.py  test_analysis.py  test_config.py  test_db.py  test_routes.py  test_training.py
training/: embed_extract.py  train_head.py
vibedentify/: __init__.py  __main__.py  analysis.py  config.py  db.py  insight.py  lookup.py  routes.py
vibedentify/routes/: __init__.py  _shared.py  analysis.py  library.py  map.py  training.py
vibedentify/static/: app.css  app.js  map.js  nowbar.js  panels.js  player.js  playlist.js
vibedentify/templates/: index.html
