[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibedentify"
version = "2.0.0"
description = "Genre v2 — Flask + Essentia music genre / BPM / key analyzer with an interactive 3D genre map."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Andres Avalos" }]
keywords = ["music", "genre", "essentia", "audio-analysis", "flask"]
dependencies = [
    "flask>=3.1",
    "mutagen>=1.47",
    "numpy>=2",
    "essentia-tensorflow>=2.1b6.dev1438",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.urls]
Repository = "https://github.com/Sif0-Dyas/Vibe_Identify"

# Flat single-module layout for now (a package restructure is the next step).
[tool.setuptools]
py-modules = ["genre_gui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
