[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibedentify"
version = "2.0.0"
description = "Genre v2 — Flask + Essentia music genre / BPM / key analyzer with an interactive 3D genre map."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Andres Avalos" }]
keywords = ["music", "genre", "essentia", "audio-analysis", "flask"]
dependencies = [
    "flask>=3.1",
    "mutagen>=1.47",
    "numpy>=2",
    "essentia-tensorflow>=2.1b6.dev1438",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.urls]
Repository = "https://github.com/Sif0-Dyas/Vibe_Identify"

[tool.setuptools]
packages = ["vibedentify"]

[tool.setuptools.package-data]
vibedentify = ["templates/*", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
# .pyw isn't in ruff's default file discovery, so the desktop shell (a .pyw) was
# silently skipped ("No Python files found"). Include it so lint + format cover it.
include = ["*.py", "*.pyw"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sorting. E501 is left to the formatter
# (long model URLs are unsplittable and would false-positive otherwise).
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Blueprint route functions reference module-level names; nothing special needed,
# but the DB/analysis modules import numpy lazily inside functions by design.
"vibedentify/routes.py" = []
